// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModelShow > should allow local overrides 1`] = `
<DocumentFragment>
  <div
    class="model-show model-show-user"
  >
    <div>
      Foo
    </div>
    <div>
      Baz
    </div>
    <div>
      Bar
    </div>
    <div>
      Foz
    </div>
  </div>
</DocumentFragment>
`;

exports[`ModelShow > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelShow > should render with global override shorthand for model 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
